# startup

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
apps/: urls.py
apps/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
apps/deliveries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/gift/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notification/: admin.py  models.py  serializers.py  urls.py  views.py
apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
root/: celery.py  drf_settings.py  settings.py  urls.py
